--- a/css/froala_page.css
+++ b/css/froala_page.css
@@ -49,6 +49,25 @@ img.fr-tag.fr-fin {
   padding: 10px 0;
   float: none;
 }
+.froala-element a.fr-file,
+a.fr-file {
+  padding-left: 17px;
+  position: relative;
+}
+.froala-element a.fr-file:before,
+a.fr-file:before {
+  position: absolute;
+  display: inline-block;
+  font-family: FontAwesome;
+  font-style: normal;
+  font-weight: normal;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  content: "\f0c6";
+  left: 3px;
+  top: 0;
+}
 .froala-element hr,
 hr.fr-tag {
   height: 0px;
