--- a/css/froala_page.css
+++ b/css/froala_page.css
@@ -118,6 +118,10 @@ table.fr-tag {
   empty-cells: show;
   width: 100%;
   margin-bottom: 10px;
+  margin-top: 10px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 .froala-element table td,
 table.fr-tag td {
@@ -126,7 +130,7 @@ table.fr-tag td {
 }
 .froala-element p,
 p.fr-tag {
-  margin-top: 0;
+  margin-top: 10px;
   margin-bottom: 10px;
 }
 .froala-element h1:not([class]),
