--- a/css/froala_page.css
+++ b/css/froala_page.css
@@ -133,7 +133,7 @@ p.fr-tag {
   margin-top: 10px;
   margin-bottom: 10px;
 }
-.froala-element h1:not([class]),
+.froala-element h1,
 h1[class="fr-tag"] {
   font-size: 36px;
   line-height: 1.1;
@@ -141,7 +141,7 @@ h1[class="fr-tag"] {
   margin-top: 20px;
   margin-bottom: 10px;
 }
-.froala-element h2:not([class]),
+.froala-element h2,
 h2[class="fr-tag"] {
   font-size: 30px;
   line-height: 1.1;
@@ -149,7 +149,7 @@ h2[class="fr-tag"] {
   margin-top: 20px;
   margin-bottom: 10px;
 }
-.froala-element h3:not([class]),
+.froala-element h3,
 h3[class="fr-tag"] {
   font-size: 24px;
   line-height: 1.1;
@@ -157,7 +157,7 @@ h3[class="fr-tag"] {
   margin-top: 20px;
   margin-bottom: 10px;
 }
-.froala-element h4:not([class]),
+.froala-element h4,
 h4[class="fr-tag"] {
   font-size: 18px;
   line-height: 1.1;
@@ -165,7 +165,7 @@ h4[class="fr-tag"] {
   margin-top: 10px;
   margin-bottom: 10px;
 }
-.froala-element h5:not([class]),
+.froala-element h5,
 h5[class="fr-tag"] {
   font-size: 14px;
   line-height: 1.1;
@@ -173,7 +173,7 @@ h5[class="fr-tag"] {
   margin-top: 10px;
   margin-bottom: 10px;
 }
-.froala-element h6:not([class]),
+.froala-element h6,
 h6[class="fr-tag"] {
   font-size: 12px;
   line-height: 1.1;
